2.000 全面改进选择器adapter，原SelectAdapter分成了SelectSimpleAdapter和SelectPlusAdapter两个子类， SelectSimpleAdapter 功能与 原SelectAdapter类似 SelectPlusAdapter 将选中状态记录在数据中，该数据必须实现SelectData接口isSelected___()方法和setSelected()方法.
2.001
SelectPlusAdapter构造器形参类型改为 List类型